# FileParser

Linux/: CMakeLists.txt  File1.test
Linux/examples/: test.cpp
Linux/include/: fileparser.hpp
Linux/src/: fileparser.cpp
Windows - VS/ConsoleApplication1/: FileParserProject.sln
Windows - VS/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.aps  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Text.txt  fileparser.cpp  fileparser.h  resource.h
Windows - VS/ConsoleApplication1/ConsoleApplication1/Debug/: ConsoleApplication1.ilk  FileParserProject.exe.recipe  FileParserProject.ilk  vc142.idb
Windows - VS/ConsoleApplication1/ConsoleApplication1/Debug/ConsoleA.52b9eda1.tlog/: CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Windows - VS/ConsoleApplication1/ConsoleApplication1/Debug/FilePars.52b9eda1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows - VS/ConsoleApplication1/ConsoleApplication1/parsedFiles/: par0.txt  par1.txt  par2.txt  par3.txt  par4.txt  par5.txt  par6.txt
